// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text it renders Text successfully 1`] = `
<Text
  style={
    [
      {
        "color": "#eee",
        "fontFamily": "Montserrat_400Regular",
        "fontSize": 24,
      },
      undefined,
    ]
  }
>
  Hello
</Text>
`;

exports[`View it renders View successfully 1`] = `
<View
  style={
    [
      undefined,
    ]
  }
>
  Hello
</View>
`;
